// generate new proto file: protoc -I user/ user/userService.proto --go_out=plugins=grpc:user

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.user";
option java_outer_classname = "UserProto";

package user;

service UserService { 
    rpc AddUser (UserInfo) returns (AddUserMessage) {}
    rpc DelUser (Username) returns (DelUserMessage) {}
}

message Username {
    string username = 1;
}

message DelUserMessage {
    string message = 1;
}

message UserInfo {
    string name = 1;
    int32 age = 2;
    string email = 3;
}

message AddUserMessage {
    string message = 1;
}
